[project]
name = "btimer"
version = "1.0.3"
authors = [
  { name="Dylan Ngo", email="it.tinhngo@gmail.com" },
]
description = "Help people get away from the computer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
    "setuptools",
    "build",
    "rich"
]

[project.scripts]
btimer = "timer:main"

[project.urls]
"Homepage" = "https://github.com/dylanngo95/timer"
"Bug Tracker" = "https://github.com/dylanngo95/timer/issues"